Adding the get endpoint to retrieve the counting centres, district centres and polling stations
