# swagger.yml
@@ -1453,6 +1453,88 @@ paths:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
 
+
+  /office:
+    get:
+      tags:
+        - Office
+      summary: Get by ID
+      operationId: api.OfficeApi.get_all
+      parameters:
+        - name: limit
+          in: query
+          description: Limit of the result array.
+          required: false
+          schema:
+            type: integer
+            default: 20
+        - name: offset
+          in: query
+          description: Offset of the result array.
+          required: false
+          schema:
+            type: integer
+            default: 0
+        - name: electionId
+          required: false
+          in: query
+          schema:
+            type: integer
+            format: int64
+        - name: officeName
+          required: false
+          in: query
+          schema:
+            type: string
+        - name: parentOfficeId
+          required: false
+          in: query
+          schema:
+            type: integer
+            format: int64
+        - name: officeType
+          required: false
+          in: query
+          schema:
+            type: string
+            enum:
+              - ElectionCommission
+              - DistrictCentre
+              - CountingCentre
+              - PollingStation
+
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+        '400':
+          description: Bad request.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+        '401':
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+        '404':
+          description: Resource was not found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+        '500':
+          description: Unexpected error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiResponse'
+
   /tally-sheet:
     get:
       tags:
@@ -1536,55 +1618,53 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ApiResponse'
-    #      security:
-    #        - organization_auth:
-    #            - 'read:org'
-#    post:
-  #      tags:
-  #        - tallySheet
-  #      summary: Create a tally sheet.
-  #      operationId: api.TallySheetApi.create
-  #      responses:
-  #        '200':
-  #          description: Successful operation.
+
+  #    post:
+  #        tags:
+  #          - tallySheet
+  #        summary: Create a tally sheet.
+  #        operationId: api.TallySheetApi.create
+  #        responses:
+  #          '200':
+  #            description: Successful operation.
+  #            content:
+  #              application/json:
+  #                schema:
+  #                  $ref: '#/components/schemas/TallySheet'
+  #          '400':
+  #            description: Bad request.
+  #            content:
+  #              application/json:
+  #                schema:
+  #                  $ref: '#/components/schemas/ApiResponse'
+  #          '401':
+  #            description: Unauthorized.
+  #            content:
+  #              application/json:
+  #                schema:
+  #                  $ref: '#/components/schemas/ApiResponse'
+  #          '404':
+  #            description: Resource was not found.
+  #            content:
+  #              application/json:
+  #                schema:
+  #                  $ref: '#/components/schemas/ApiResponse'
+  #          '500':
+  #            description: Unexpected error.
+  #            content:
+  #              application/json:
+  #                schema:
+  #                  $ref: '#/components/schemas/ApiResponse'
+  #        #      security:
+  #        #        - organization_auth:
+  #        #            - 'write:org'
+  #        requestBody:
   #          content:
   #            application/json:
   #              schema:
   #                $ref: '#/components/schemas/TallySheet'
-  #        '400':
-  #          description: Bad request.
-  #          content:
-  #            application/json:
-  #              schema:
-  #                $ref: '#/components/schemas/ApiResponse'
-  #        '401':
-  #          description: Unauthorized.
-  #          content:
-  #            application/json:
-  #              schema:
-  #                $ref: '#/components/schemas/ApiResponse'
-  #        '404':
-  #          description: Resource was not found.
-  #          content:
-  #            application/json:
-  #              schema:
-  #                $ref: '#/components/schemas/ApiResponse'
-  #        '500':
-  #          description: Unexpected error.
-  #          content:
-  #            application/json:
-  #              schema:
-  #                $ref: '#/components/schemas/ApiResponse'
-  #      #      security:
-  #      #        - organization_auth:
-  #      #            - 'write:org'
-  #      requestBody:
-  #        content:
-  #          application/json:
-  #            schema:
-  #              $ref: '#/components/schemas/TallySheet'
-  #        description: Tally sheet object.
-  #        required: True
+  #          description: Tally sheet object.
+  #          required: True
 
   /tally-sheet/{tallySheetId}:
     get:
